Random Choice Picker: fix width on small screens

--- a/13 Random Choice Picker/style.css
+++ b/13 Random Choice Picker/style.css
@@ -2,76 +2,79 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
 :root {
-  --accent-color: #a876aa;
+    --accent-color: #a876aa;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
-  background-color: #eee;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  margin: 0;
+    font-family: "Montserrat", sans-serif;
+    background-color: #eee;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
 }
 
 h2 {
-  color: var(--accent-color);
-  text-align: center;
-  font-size: 20px;
-  margin: 10px;
+    color: var(--accent-color);
+    text-align: center;
+    font-size: 20px;
+    margin: 10px;
 }
 
 h3 {
-  color: #666;
-  text-align: center;
-  font-weight: 100;
-  margin: 0;
+    color: #666;
+    text-align: center;
+    font-weight: 100;
+    margin: 0;
 }
 
 .container {
-  width: 500px;
+    width: 500px;
+    max-width: 100vw;
+    padding: 10px;
+
 }
 
 textarea {
-  border: none;
-  display: block;
-  min-width: 100%;
-  min-height: 100px;
-  border-radius: 5px;
-  font-family: inherit;
-  padding: 10px;
-  margin: 30px 0;
-  font-size: 16px;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    border: none;
+    display: block;
+    min-width: 100%;
+    min-height: 100px;
+    border-radius: 5px;
+    font-family: inherit;
+    padding: 10px;
+    margin: 30px 0;
+    font-size: 16px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 textarea:focus {
-  outline: none;
+    outline: none;
 }
 
 #tags {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .tag {
-  background-color: transparent;
-  border: 1px solid var(--accent-color);
-  color: var(--accent-color);
-  padding: 10px 20px;
-  margin: 0 5px 10px 0;
-  border-radius: 50px;
-  display: inline-block;
+    background-color: transparent;
+    border: 1px solid var(--accent-color);
+    color: var(--accent-color);
+    padding: 10px 20px;
+    margin: 0 5px 10px 0;
+    border-radius: 50px;
+    display: inline-block;
 }
 
 .tag.highlight {
-  background-color: var(--accent-color);
-  color: #fff;
+    background-color: var(--accent-color);
+    color: #fff;
 }
